--- a/rpi-thermostat.conf
+++ b/rpi-thermostat.conf
@@ -1,4 +1,5 @@
 [program:thermostat]
+# Timezone should be in config layer
 command=sudo TZ=US/Central STATIC_DIR=/home/pi/rpi-thermostat/static /home/pi/rpi-thermostat/venv/bin/python2.7 /home/pi/rpi-thermostat/main.py
 autostart=true
 autorestart=true
